--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
-
-
 {
   "name": "hook-ai-app",
-  "type": "module", 
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -12,7 +10,8 @@
     "@google/genai": "^1.29.1",
     "@supabase/supabase-js": "^2.81.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.9.6"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.7.0",
@@ -23,5 +22,3 @@
     "vite": "^5.4.21"
   }
 }
-
-
